namespaces/live.cloud-platform.service.justice.gov.uk/laa-crime-application-store-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laa-crime-application-store-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    cloud-platform.justice.gov.uk/namespace: "laa-crime-application-store-dev"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-crm-4-5-7"
    cloud-platform.justice.gov.uk/application: "laa-crime-application-store"
    cloud-platform.justice.gov.uk/owner: "CRM457: nscc@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-crime-application-store"
    cloud-platform.justice.gov.uk/team-name: "laa-crime-application-store-admins"
    cloud-platform.justice.gov.uk/review-after: ""
